--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: S.Mustafa
 #logo: /assets/img/headshot_circle.png
 #description: text below image
 show_downloads: true
-theme: gem "minima"
+theme: minima
